# md_note_taking

./: .env  Note_Taking_API.postman_collection.json  README.md  app.py  pyproject.toml  requirements.txt  test.md
backups/: 20251028T193446-7215471b-note_9gq8rzvb.md
helpers/: minio_helper.py
instance/: notes.db
models/: notes.py
routes/: note_routes.py
service/: note_service.py
